--- a/src/Container/RecipeCards.css
+++ b/src/Container/RecipeCards.css
@@ -21,14 +21,20 @@
     width: 404px;
     border-radius: 6px;
     float: left; 
-    box-shadow: 1px 1px 10px 6px;
+    /* box-shadow: 1px 1px 10px 6px; */
+    box-shadow:
+
+    0 7px 30px -10px rgba(150,170,180,0.5);
   
   }
   
   .card:hover{
     /* box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); */
     transform: scale(1.02,1.02);
-    box-shadow: 1px 1px 10px 6px;
+    /* box-shadow: 1px 1px 10px 6px; */
+    box-shadow:
+
+    0 7px 30px -10px rgba(150,170,180,0.5);
   }
   
   .card__info{
@@ -36,7 +42,10 @@
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
     padding: 16px 24px 24px 24px;
-    box-shadow: 0px 0px 5px 2px ;
+    /* box-shadow: 0px 0px 5px 2px ; */
+    box-shadow:
+
+    0 7px 30px -10px rgba(150,170,180,0.5);
   }
   
   .card__categary{
