--- a/src/Container/Loading.css
+++ b/src/Container/Loading.css
@@ -18,7 +18,8 @@
     border-radius: 50%;
     position: fixed;
     top: 50%;
-    left: 50%;
+    /* left: 50%; */
+    /* right: 50%; */
     transform: translate(-50%, -50%);
     /* z-index: 1; */
     animation: spinner 1.5s infinite linear;
